hphp/test/zend/bad/tests-lang/foreachLoop.008.php
<?php
foreach (array(1,2) as $k=>&$v) {
  var_dump($v);
}
?>