hphp/test/zend/bad/tests-lang/foreachLoop.008.php.exp
HipHop Fatal error: Cannot create references to elements of a temporary array expression in hphp/test/zend/bad/tests-lang/foreachLoop.008.php on line 2
